# wyrm

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  cpp-pre-commit.sh  setup.py
SimpleWrap.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example/SimpleWrap/: CMakeLists.txt
example/SimpleWrap/inc/: function.h
example/SimpleWrap/src/: function.cpp  wrap.cpp
inc/: PybindUtil  wyrm
inc/pu/: PybindUtil  autoCastParameter.h  numpyHandler.h
inc/wy/: autoCastParameter.h  numpyHandler.h
test/: CMakeLists.txt
test/src/: numpyHandlerTest.cpp
